Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-09-15 Kimmo
 BUG: [ 1777054 ] Next difference sometimes not seen with Wrap Lines enabled
  Src: MergeEditView.cpp MergeEditView.h
 BUG: [ 1787816 ] Bug in File Rename
  Src: DirActions.cpp
 BUG: [ 1776487 ] REPLACE dialog, copy highlighted text to FIND fileld
  Src/editlib: ccrystaleditview.cpp

2007-08-22 Tim
 PATCH: [ 1743623 ] ChineseSimplified language .rc file for trunk rev.4317
  Src/Languages/ChineseSimplified: MergeChineseSimplified.rc

2007-08-22 Takashi
 BUG: [ 1759793 ] Filter test dialog problem with directory filters
  Src: TestFilterDlg.cpp

2007-08-12 Tim
 PATCH: [ 1772028 ] Russian translation update (from WinMergeMod)
  Src/Languages/Russian: MergeRussian.rc

2007-07-13 Kimmo
 Add Alberto Kalb to contributors list
  Docs/Users: Contributors.txt

2007-06-19 2.6.8 Stable Release (R4343)

2007-06-17 Tim
 PATCH: [ 1722213 ] Fix wrong </endtag> syntax color in HTML highlighters
  Src/editlib: asp.cpp html.cpp php.cpp

2007-06-17 Gal
 BUG: [ 1705874 ] Hitting escape during listitem rename also exited winmerge
  Src: DirView.cpp

2007-06-16 Jochen
 PATCH: [ 1734439 ] Fix Bug #1723263 "Zip --> Both" operation give unwanted content in output
  Src: 7zCommon.cpp

2007-06-14 Kimmo
 Bump ShellExtension version to 1.9.3
  ShellExtension: ShellExtension.rc
 PATCH: [ 1735240 ] Copy new Delphi- and Symbian -file filters to 2.6 branch
  Filters new files: Delphi.flt Symbian.flt
 PATCH: [ 1727878 ] 26Branch: Disable hiding folder compare confirmation dialogs
  Src: DirActions.cpp

2007-06-07 Kimmo
 PATCH: [ 1721815 ] Add CSharp file filter for 2.6.x
  Filters new file: CSharp_loose.flt

2007-05-31 Tim
 PATCH: [ 1729179 ] Change "Rational Clearcase" to "Rational ClearCase"
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-05-29 Takashi
 BUG [ 1722197 ] Downgrading from 2.7.3.4 to 2.6.6 causes Explorer crash
  ShellExtension: WinMergeShell.cpp
