@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-09-17 Takashi
+ BUG: [ 1795814 ] When word wrap+scroll to first are on, it fails to scroll
+  Src: MergeDoc.cpp
+
 2007-09-15 Kimmo
  BUG: [ 1777054 ] Next difference sometimes not seen with Wrap Lines enabled
   Src: MergeEditView.cpp MergeEditView.h
